# fallbird

./: CMakeLists.txt  README.md
include/: binaryhandler.hpp  winapi.cpp  winapi.h  xorstr.hpp
src/: Config.h  Counter.cpp  Counter.h  Includes.h  Utils.cpp  Utils.h  main.cpp
src/antianalysis/: AntiAnalysisChecker.cpp  AntiAnalysisChecker.h
src/entity/: AutoFill.h  Bookmark.h  Cookie.h  CreditCard.h  Download.h  Entity.h  History.h  MinecraftAccount.h  Password.h  SharedEntity.h
src/stealer/: Stealer.cpp  Stealer.h  StealerImpl.h  StealerModule.h  StealerModuleGroup.h
src/stealer/impl/: FileZilla.cpp  FileZilla.h  Info.cpp  Info.h  InstalledApps.cpp  InstalledApps.h  Processes.cpp  Processes.h  Screenshot.cpp  Screenshot.h
src/stealer/impl/brownsers/: BrowserModule.h  Browsers.h
src/stealer/impl/brownsers/chromium/: ChromiumBrowserModule.h  ChromiumBrowsers.cpp  ChromiumBrowsers.h
src/stealer/impl/brownsers/chromium/impl/: CAutoFill.cpp  CAutoFill.h  CBookmarks.cpp  CBookmarks.h  CCookies.cpp  CCookies.h  CCreditCards.cpp  CCreditCards.h  CDownloads.cpp  CDownloads.h  CHistory.cpp  CHistory.h  CPasswords.cpp  CPasswords.h
src/stealer/impl/browsers/: BrowserModule.h
src/stealer/impl/browsers/chromium/: ChromiumBrowserModule.h  ChromiumBrowsers.cpp  ChromiumBrowsers.h
src/stealer/impl/browsers/chromium/impl/: CAutoFill.cpp  CAutoFill.h  CBookmarks.cpp  CBookmarks.h  CCookies.cpp  CCookies.h  CCreditCards.cpp  CCreditCards.h  CDownloads.cpp  CDownloads.h  CHistory.cpp  CHistory.h  CPasswords.cpp  CPasswords.h
src/stealer/impl/browsers/entity/: AutoFill.h  Bookmark.h  Cookie.h  CreditCard.h  Download.h  Entity.h  History.h  Login.h  Password.h  SharedEntity.h
src/stealer/impl/browsers/firefox/: FirefoxBrowserModule.h  FirefoxBrowsers.cpp  FirefoxBrowsers.h
src/stealer/impl/browsers/firefox/impl/: FBookmarks.cpp  FBookmarks.h  FCookies.cpp  FCookies.h  FHistory.cpp  FHistory.h  FPasswords.cpp  FPasswords.h
src/stealer/impl/crypto/: Crypto.cpp  Crypto.h
src/stealer/impl/crypto/impl/: Atomic.cpp  Atomic.h  Exodus.cpp  Exodus.h
src/stealer/impl/files/: Files.cpp  Files.h
src/stealer/impl/games/: Games.cpp  Games.h
src/stealer/impl/games/impl/: BattleNet.cpp  BattleNet.h  Minecraft.cpp  Minecraft.h  Steam.cpp  Steam.h  UbisoftConnect.cpp  UbisoftConnect.h
src/stealer/impl/messengers/: Messengers.cpp  Messengers.h  Socials.cpp
src/stealer/impl/messengers/impl/: Discord.cpp  Discord.h  Telegram.cpp  Tox.cpp
src/stealer/impl/socials/: Socials.cpp  Socials.h
src/stealer/impl/socials/impl/: Discord.cpp  Discord.h  Telegram.cpp  Telegram.h  Tox.h
src/stealer/impl/vpns/: VPNs.cpp  VPNs.h
src/stealer/impl/vpns/impl/: OpenVPN.cpp  OpenVPN.h
src/utils/: Base64Util.cpp  Base64Util.h  FilesUtil.cpp  FilesUtil.h  HttpUtil.cpp  HttpUtil.h  HttpUtils.cpp  HttpUtils.h  OSUtil.cpp  OSUtil.h  SQLiteUtil.cpp  SQLiteUtil.h  StringUtil.cpp  StringUtil.h  StringUtils.cpp  StringUtils.h  Utils.cpp  Utils.h
src/utils/chromuim/: ChromiumUtil.cpp  ChromiumUtil.h  ChromuimUtil.cpp  ChromuimUtil.h
src/utils/sqlite/: SQLite.cpp  SQLite.h
